# suto_legado_parser

./: pyproject.toml
suto_legado_parser/: __init__.py  book_soure_parser.py
suto_legado_parser/rule/: __init__.py  compile.py  parser.py  rules.py
suto_legado_parser/utils/: __init__.py  js.py  network.py  text.py
